Oppretter PåbegyntSøknadMapper med tilhørende test
